[package]
name = "to_markdown_table"
version = "0.1.1"
edition = "2021"
description = "An easy way to format any data structure into a Markdown table."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
